# RemoteCtl

./: README.md  platform8.0.keystore  settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/androidTest/java/com/flyzebra/record/: ExampleInstrumentedTest.java
app/src/androidTest/java/com/flyzebra/screenrecord/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/flyzebra/remotectl/: MainActivity.java
app/src/main/java/com/flyzebra/scrcpy/: ControlMessageReader.java  DesktopConnection.java  DeviceMessageWriter.java  DisplayInfo.java  InvalidDisplayIdException.java  KeyComposition.java  Ln.java  Point.java  PointersState.java  ScreenEncoder.java  ScreenEncoder_old.java  ScreenInfo.java  Size.java
app/src/main/java/com/flyzebra/screenrecord/: CallbackController.java  CommonUtil.java  (+8 more)
app/src/main/res/drawable/: count_time_shape.xml
app/src/main/res/layout/: activity_main.xml  activity_play.xml  record_screen_time_float.xml  screen_record_activity.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
remotectl/: build.gradle  proguard-rules.pro
remotectl/src/main/: AndroidManifest.xml
remotectl/src/main/res/layout/: activity_main.xml  screen_record_activity.xml
remotectl/src/main/res/values/: strings.xml  styles.xml
rtmplib/: CMakeLists.txt  build.gradle
rtmplib/src/main/cpp/rtmp/: libresrtmp.c  libresrtmp.h
rtmplib/src/main/java/com/flyzebra/rtmp/: RESFlvData.java
scrcpy/: build.gradle
scrcpy/src/main/: AndroidManifest.xml
(+145 files in other folders)
